@@ -4,6 +4,8 @@ update-manager (1:0.87.15) hardy; urgency=low
     - fix fd leak 
   * DistUpgrade/DistUpgradeViewKDE.py:
     - fix crash/race in terminal key press handler (LP: #205445)
+  * UpdateManager/UpdateManager.py:
+    - do not crash if gconf database is not writable (LP: #208687)
   * po/*.po:
     - make update-po
 
